--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+PORT = 3000
 ETHERSCAN_API_KEY=NZ5G99S66WE5UJB773744VH517GH2PCBIW
 MONGO_URI=mongodb+srv://ishitagrawal0207:lpdNBhlHhN8cuoER@cluster0.hg0xkl5.mongodb.net/KoinxBackend
